# binary-generator

./: README.md  pyproject.toml
src/binary_generator/: binary_generator.py
tests/: test_binary_generator.py
